# clangformat-cmake-example

./: .travis.yml  CMakeLists.txt  README.md  hello.cpp  hello.hpp
etalon/src/: hello.cpp
src/: hello.hpp
test/: CMakeLists.txt  hello_test.cpp
